--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   <script src='main.js'></script>
 </head>
 <body>
-  <p>KK?</p>
+  <button id="Teste" onclick="redirect()"></button>
 </body>
 </html>
