--- a/landingPage/page.html
+++ b/landingPage/page.html
@@ -9,6 +9,8 @@
   <script src='index.js'></script>
 </head>
 <body>
-  
+  <div>
+    <p>Gastar dinheiro em games = gay</p>
+  </div>
 </body>
 </html>
