--- a/landingPage/page.html
+++ b/landingPage/page.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div>
-    <p>Gastar dinheiro em games = gay</p>
+    <p>Gastar dinheiro em games = gay (principalmente o davi)</p>
   </div>
 </body>
 </html>
