--- a/landingPage/page.html
+++ b/landingPage/page.html
@@ -21,12 +21,14 @@
   </nav>
 
   <section id="mint-page">
-   
-      <div id="mint-box">
-        <h1 id="mint-title">Clique no botão abaixo para receber sua NFT.</h1>
-        <button id="mint-button" type="button" onclick="mint()">Mint</button>
-      </div>
-      <div id="image"></div>
+
+    <div id="mint-box">
+      <h1 id="mint-title">Clique no botão abaixo para receber sua NFT.</h1>
+      <button id="mint-button" type="button" onclick="mint()">Mint</button>
+    </div>
+    <div id="image">
+      <img id="imagem1"></img>
+    </div>
   </section>
 
   <section id="projetistas">
@@ -70,7 +72,9 @@
   </section>
 
   <section id="galeria">
+    <div id="galeria-imagens">
 
+    </div>
   </section>
 
 
