Push teste conectado

--- a/landingPage/page.html
+++ b/landingPage/page.html
@@ -16,7 +16,7 @@
     <ul id="menu">
       <li><a href="#mint-page">NFT</a></li>
       <li><a href="#projetistas">Projetistas</a></li>
-      <li><a href="#galeria">Galeria</a></li>
+      <li><a href="#galeria">Galera</a></li>
     </ul>
   </nav>
 
