--- a/landingPage/page.html
+++ b/landingPage/page.html
@@ -27,7 +27,7 @@
       <button id="mint-button" type="button" onclick="mint()">Mint</button>
     </div>
     <div id="image">
-      <img id="imagem1"></img>
+      <img id="imagem1" src="./assets/img/nothing.png"></img>
     </div>
   </section>
 
