--- a/landingPage/page.html
+++ b/landingPage/page.html
@@ -46,7 +46,7 @@
           <li>
             <p>Unifei - Campus Itabira</p>
           </li>
-          <li>Github: <a>arthuhenriq</a></li>
+          <li>Github: <a href="https://github.com/arthuhenriq" target="_blank">arthuhenriq</a></li>
         </ul>
 
       </div>
@@ -64,7 +64,7 @@
           <li>
             <p>Unifei - Campus Itabira</p>
           </li>
-          <li>Github: <a>JVSREco19</a></li>
+          <li>Github: <a href="https://github.com/JVSREco19" target="_blank">JVSREco19</a></li>
         </ul>
 
       </div>
